Update product management to handle auth