@@ -1,21 +1,24 @@
 package uade.api.tpo_p2_mn_grupo_03.service.impl.productService;
 
-import java.time.Instant;
 import java.util.List;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import uade.api.tpo_p2_mn_grupo_03.dto.request.CreateProductRequestDTO;
 import uade.api.tpo_p2_mn_grupo_03.dto.request.UpdateProductRequestDTO;
+import uade.api.tpo_p2_mn_grupo_03.dto.response.CategoryResponseDTO;
 import uade.api.tpo_p2_mn_grupo_03.dto.response.ProductResponseDTO;
-import uade.api.tpo_p2_mn_grupo_03.model.Product;
-import uade.api.tpo_p2_mn_grupo_03.repository.CategoryRepository;
-import uade.api.tpo_p2_mn_grupo_03.repository.ProductRepository;
-import uade.api.tpo_p2_mn_grupo_03.service.impl.productService.exception.ProductNotFoundException;
-import uade.api.tpo_p2_mn_grupo_03.service.IProductService;
+import uade.api.tpo_p2_mn_grupo_03.mapper.ProductMapper;
 import uade.api.tpo_p2_mn_grupo_03.model.Category;
+import uade.api.tpo_p2_mn_grupo_03.model.Product;
+import uade.api.tpo_p2_mn_grupo_03.model.User;
+import uade.api.tpo_p2_mn_grupo_03.repository.ProductRepository;
+import uade.api.tpo_p2_mn_grupo_03.service.IProductService;
+import uade.api.tpo_p2_mn_grupo_03.service.impl.categoryService.CategoryService;
+import uade.api.tpo_p2_mn_grupo_03.service.impl.productService.exception.ProductNotFoundException;
+import uade.api.tpo_p2_mn_grupo_03.service.impl.productService.exception.UnauthorizedProductAccessException;
 
 /**
  * Service implementation for handling product operations.
@@ -27,133 +30,107 @@ public class ProductService implements IProductService {
     private ProductRepository productRepository;
 
     @Autowired
-    private CategoryRepository categoryRepository;
+    private CategoryService categoryService;
 
     /**
      * Creates a new product and persists it.
      *
-     * @param dto The product creation data
+     * @param dto  The product creation data
+     * @param user The authenticated user creating the product
      * @return The created product as a response DTO
      */
     @Override
-    public ProductResponseDTO createProduct(CreateProductRequestDTO dto) {
-        // Find category
-        Category category = categoryRepository.findById(dto.getCategoryId())
-            .orElseThrow(() -> new RuntimeException("Category not found"));
+    public ProductResponseDTO createProduct(CreateProductRequestDTO dto, User user) {
+        // Retrieve category from service
+        CategoryResponseDTO categoryDTO = categoryService.findById(dto.getCategoryId());
+        Category category = new Category();
+        category.setId(categoryDTO.getId());
 
-        // TODO: Add seller logic when available
-        // User seller = userRepository.findById(dto.getSellerId())
-        //     .orElseThrow(() -> new RuntimeException("Seller not found"));
-        // product.setSeller(seller);
-
-        // Map DTO to entity
-        Product product = new Product();
-        product.setName(dto.getName());
-        product.setDescription(dto.getDescription());
-        product.setPrice(dto.getPrice());
-        product.setStock(dto.getStock());
-        product.setImages(dto.getImages());
-        product.setCategory(category);
-        product.setCreatedAt(Instant.now());
-        product.setUpdatedAt(Instant.now());
-
-        // Persist product
+        // Map DTO to entity and persist
+        Product product = ProductMapper.toEntity(dto, category, user);
         Product savedProduct = productRepository.save(product);
 
-        // Build and return response DTO
-        return ProductResponseDTO.builder()
-            .id(savedProduct.getId())
-            .name(savedProduct.getName())
-            .description(savedProduct.getDescription())
-            .price(savedProduct.getPrice())
-            .stock(savedProduct.getStock())
-            .images(savedProduct.getImages())
-            .categoryId(savedProduct.getCategory().getId())
-            .sellerId(savedProduct.getSeller() != null ? savedProduct.getSeller().getId() : null)
-            .createdAt(savedProduct.getCreatedAt())
-            .updatedAt(savedProduct.getUpdatedAt())
-            .build();
+        return ProductMapper.toResponse(savedProduct);
     }
 
     /**
      * Retrieves all products as response DTOs.
      *
-     * @return List of product response DTOs
+     * @return A list of product response DTOs
      */
     @Override
     public List<ProductResponseDTO> getAllProducts() {
         return productRepository.findAll().stream()
-                .map(this::convertToDTO)
-                .toList();
+            .map(ProductMapper::toResponse)
+            .collect(Collectors.toList());
     }
 
     /**
      * Updates a product by its ID.
      *
-     * @param id The ID of the product to update
-     * @param dto The updated product data
+     * @param productId The ID of the product to update
+     * @param dto       The updated product data
+     * @param user      The authenticated user attempting the update
      * @return The updated product as a response DTO
+     * @throws ProductNotFoundException           if the product does not exist
+     * @throws UnauthorizedProductAccessException if the user is not the product's seller
      */
     @Override
-    public ProductResponseDTO updateProduct(Long id, UpdateProductRequestDTO dto) {
-        Product product = productRepository.findById(id)
-                .orElseThrow(() -> new ProductNotFoundException(id));
+    public ProductResponseDTO updateProduct(Long productId, UpdateProductRequestDTO dto, User user) {
+        Product product = productRepository.findById(productId)
+            .orElseThrow(() -> new ProductNotFoundException(productId));
 
-        Category category = categoryRepository.findById(dto.getCategoryId())
-                .orElseThrow(() -> new RuntimeException("Category not found"));
+        if (!product.getSeller().getId().equals(user.getId())) {
+            throw new UnauthorizedProductAccessException("update");
+        }
 
-        product.setName(dto.getName());
-        product.setDescription(dto.getDescription());
-        product.setPrice(dto.getPrice());
-        product.setStock(dto.getStock());
-        product.setImages(dto.getImages());
-        product.setCategory(category);
-        product.setUpdatedAt(Instant.now());
+        // Load new category if changed
+        Category updatedCategory = null;
+        if (dto.getCategoryId() != null && !dto.getCategoryId().equals(product.getCategory().getId())) {
+            CategoryResponseDTO categoryDTO = categoryService.findById(dto.getCategoryId());
+            updatedCategory = new Category();
+            updatedCategory.setId(categoryDTO.getId());
+        }
 
-        return convertToDTO(productRepository.save(product));
+        // Apply changes
+        ProductMapper.updateEntity(product, dto, updatedCategory);
+
+        Product updated = productRepository.save(product);
+        return ProductMapper.toResponse(updated);
     }
 
     /**
      * Deletes a product by its ID.
      *
-     * @param id The ID of the product to delete
+     * @param productId The ID of the product to delete
+     * @param user      The authenticated user attempting the deletion
+     * @throws ProductNotFoundException           if the product does not exist
+     * @throws UnauthorizedProductAccessException if the user is not the product's seller
      */
     @Override
-    public void deleteProduct(Long id) {
-        Product product = productRepository.findById(id)
-                .orElseThrow(() -> new ProductNotFoundException(id));
+    public void deleteProduct(Long productId, User user) {
+        Product product = productRepository.findById(productId)
+            .orElseThrow(() -> new ProductNotFoundException(productId));
+
+        if (!product.getSeller().getId().equals(user.getId())) {
+            throw new UnauthorizedProductAccessException("delete");
+        }
+
         productRepository.delete(product);
     }
 
     /**
-     * Finds a product by ID and returns it as a DTO.
+     * Finds a product by ID and returns it as a response DTO.
      *
-     * @param id The ID of the product to find
-     * @return The product DTO
-     * @throws ProductNotFoundException if the product is not found
+     * @param productId The ID of the product to find
+     * @return The product response DTO
+     * @throws ProductNotFoundException if the product does not exist
      */
-    public ProductResponseDTO findById(Long id) {
-        return productRepository.findById(id)
-                .map(this::convertToDTO)
-                .orElseThrow(() -> new ProductNotFoundException(id));
-    }
+    @Override
+    public ProductResponseDTO findById(Long productId) {
+        Product product = productRepository.findById(productId)
+            .orElseThrow(() -> new ProductNotFoundException(productId));
 
-    /**
-     * Converts a Product entity to a ProductResponseDTO.
-     *
-     * @param product The product entity to convert
-     * @return The converted DTO
-     */
-    private ProductResponseDTO convertToDTO(Product product) {
-        return ProductResponseDTO.builder()
-                .id(product.getId())
-                .name(product.getName())
-                .description(product.getDescription())
-                .price(product.getPrice())
-                .stock(product.getStock())
-                .images(product.getImages())
-                .categoryId(product.getCategory().getId())
-                .sellerId(product.getSeller() != null ? product.getSeller().getId() : null)
-                .build();
+        return ProductMapper.toResponse(product);
     }
 }
